# Sistema-Citas2

./: docker-compose.yml
Backend/: .env  .env.example  Dockerfile  crear_admin_sistema.py  ejecutar_migracion.py  ejecutar_migracion_estado_citas.py  ejecutar_migracion_horarios_areas.py  limpiar_visitantes.py  limpiar_visitantes.sql  migration_add_estado_citas.sql  migration_add_horarios_areas.sql  migration_add_horarios_coordinadores.sql  migration_add_nombre_persona_visitada.sql  migration_make_usuario_visitado_optional.sql  pyproject.toml
Backend/src/: main.py
Backend/src/database/: database_config.py
Backend/src/lib/Areas/: __init__.py
Backend/src/lib/Areas/models/: __init__.py  horario_area_orm.py
Backend/src/lib/Areas/routes/: __init__.py  horario_area_routes.py
Backend/src/lib/Areas/schemas/: __init__.py  horario_area_schema.py
Backend/src/lib/Areas/services/: __init__.py  horario_area_servicios.py
Backend/src/lib/Carros/models/: carro_orm.py
Backend/src/lib/Carros/schemas/: carro_schema.py
Backend/src/lib/Citas/models/: citas_orm.py
Backend/src/lib/Citas/schemas/: citas_schema.py
Backend/src/lib/Usuarios/models/: horario_coordinador_orm.py  usuarios_orm.py
Backend/src/lib/Usuarios/routes/: usuario_routes.py
Backend/src/lib/Usuarios/schemas/: horario_coordinador_schema.py  usuario_schema.py
Backend/src/lib/Usuarios/services/: email_servicios.py  usuarios_servicios.py
Backend/src/lib/Visitantes/models/: visitantes_orm.py
Backend/src/lib/auth/: auth.py  auth_routes.py  auth_schemas.py
citasulsa/: cu.avif  index.html  package.json  (+2 more)
(+19 files in other folders)
